app/client/src/styles.css
/* --- EPA/USWDS --- */
.usa-radio__label {
  text-indent: 0;
}

.usa-modal--lg .usa-modal__main {
  max-width: 48rem;
}

.usa-table--striped tbody tr:nth-child(odd) td,
.usa-table--striped tbody tr:nth-child(odd) th {
  color: inherit;
}

/* --- Formio --- */
.formio-form-group {
  margin-bottom: 20px;
}

.field-required:after {
  content: " *";
  color: red;
}

.csb-form button[type="submit"] i {
  display: none;
}

/* --- React UI --- */
[data-reach-dialog-overlay] {
  /* match USWDS modal */
  padding: 1.5rem;
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
}

[data-reach-dialog-overlay]::before {
  /* match USWDS modal */
  content: "";
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

[data-reach-dialog-content] {
  /* match USWDS modal */
  overflow-x: auto;
  margin: 1.25rem auto;
  padding: 0;
  width: 100%;
}

